--- a/src/app/pages/molding/molding.page.html
+++ b/src/app/pages/molding/molding.page.html
@@ -5,7 +5,7 @@
             <!-- <ion-icon slot="start" name="scan-outline"></ion-icon> -->
             {{scanButtonText}}
         </ion-button>
-        <ion-input slot=start #scanInput type="text" placeholder="Id du kit" (change)="onKitInputChange(scanInput.value.toString())" (focusout)="inputOnBlur()" (focusin)="inputOnFocus()"></ion-input>
+        <ion-input slot=start #scanInput type="text" placeholder="Id du kit" (change)="onInputChange(scanInput.value.toString())" (focusout)="inputOnBlur()" (focusin)="inputOnFocus()"></ion-input>
         <ion-button size=small slot=start (click)="associateToolClick()" fill=clear size=default>
             <ion-icon slot="start" name="link-outline"></ion-icon>
             OUTILLAGE
@@ -20,7 +20,7 @@
     </ion-toolbar>
 
     <mat-accordion class="example-headers-align" multi>
-        <mat-expansion-panel>
+        <mat-expansion-panel *ngIf="molding.kits.length >0">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     List des Kits
@@ -33,6 +33,7 @@
             <ion-list *ngIf="molding?.kits">
                 <ion-list-header lines="inset" color=light>
                     <ion-label class="ion-hide-md-down">Référence Sap</ion-label>
+                    <ion-label class="ion-hide-md-down">ID-MM</ion-label>
                     <ion-label>Désignation</ion-label>
                     <ion-label>Péremption à -18°C</ion-label>
                     <ion-label>A draper avant le</ion-label>
@@ -43,6 +44,7 @@
                         <ion-text class="strong" *ngIf="kit === molding.matDrap">(Drap)</ion-text>
                         <ion-text class="strong" *ngIf="kit === molding.matPolym">(Pol)</ion-text>
                     </ion-label>
+                    <ion-label class="ion-hide-md-down">{{kit.idMM}}</ion-label>
                     <ion-label>{{kit.designationSAP}}</ion-label>
                     <ion-label [color]="kitService.isPerim(kit.peremptionMoins18, molding.moldingDay) ? 'danger' : 'dark'">{{kit.peremptionMoins18 | date: "dd/MM/yyyy à HH:mm"}}</ion-label>
                     <ion-label [color]="kitService.isPerim(kit.aDrapAv, molding.moldingDay) ? 'danger' : 'dark'">{{kit.aDrapAv | date: "dd/MM/yyyy à HH:mm"}}</ion-label>
@@ -54,7 +56,7 @@
             </ion-list>
         </mat-expansion-panel>
 
-        <mat-expansion-panel>
+        <mat-expansion-panel *ngIf="molding.cores.length >0">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     Liste des nidas
@@ -65,8 +67,8 @@
             </mat-expansion-panel-header>
             <ion-list>
                 <ion-item>
-                    <ion-label>
-                        ]C201W028551~1020M0225104~5220M0225104001
+                    <ion-label *ngFor="let core of molding.cores">
+                        {{core.batchNumber}}
                     </ion-label>
                 </ion-item>
             </ion-list>
