--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -1,7 +1,7 @@
 <app-shared-admin-header></app-shared-admin-header>
 
 <ion-content>
-    <ion-menu side="start" type="push" contentId="admin-content" max-edge-start=10>
+    <ion-menu side="start" type="push" contentId="admin-content">
         <ion-header>
             <ion-toolbar color="danger">
                 <ion-title>Menu de l'admnistration</ion-title>
@@ -19,5 +19,7 @@
             </ion-list>
         </ion-content>
     </ion-menu>
-    <ion-router-outlet id="admin-content"></ion-router-outlet>
+
 </ion-content>
+
+<ion-router-outlet id="admin-content"></ion-router-outlet>
