--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,7 +1,6 @@
-<app-shared-user-header page="Accueil"></app-shared-user-header>
-
-<ion-content [fullscreen]="true" color=medium>
-    <ion-card class="menu-item-card" [button]="(menuItem.type === 'button')" *ngFor="let menuItem of menuItems" [routerLink]="(menuItem.type ==='button') ? menuItem.path : ''">
+<app-shared-user-header [page]="page"></app-shared-user-header>
+<ion-content [fullscreen]="false" color=medium id="home-content">
+    <ion-card class="menu-item-card" [button]="(menuItem.type === 'button')" *ngFor="let menuItem of page.menuItems" [routerLink]="(menuItem.type ==='button') ? menuItem.path : ''">
         <ion-card-header>
             <ion-card-title>
                 <ion-icon *ngIf="menuItem.options?.qualityOnly" name="shield-half-outline"></ion-icon>
@@ -11,7 +10,7 @@
         <ion-card-content *ngIf="menuItem.options?.input">
             <ion-item shape=round>
                 <ion-label>Id Moulage</ion-label>
-                <ion-input #inputIdMolding type="text" placeholder="" (change)="idMoldingInputChange()"></ion-input>
+                <ion-input #inputIdMolding type="text" placeholder=""></ion-input>
                 <ion-note slot=helper>Entrer un numéro d'ID ou scanner le code barre de la feuille de moulage</ion-note>
             </ion-item>
         </ion-card-content>
