--- a/src/app/pages/admin/admin-molding/admin-molding.page.html
+++ b/src/app/pages/admin/admin-molding/admin-molding.page.html
@@ -19,7 +19,16 @@
                         </ion-toolbar>
                     </ion-card-header>
                     <ion-card-content>
-                        <table mat-table [dataSource]="moldings" class="mat-elevation-z8">
+                        <ion-input type="text" placeholder="Numéro d'OT" (ionInput)="applyFilter($event)"></ion-input>
+
+                        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" fixedLayout=true>
+                            <!-- Id Column -->
+                            <ng-container matColumnDef="status">
+                                <th mat-header-cell *matHeaderCellDef></th>
+                                <td mat-cell *matCellDef="let element">
+                                    <ion-icon name="ellipse" [color]="(element.status) ? 'danger' : 'success'"></ion-icon>
+                                </td>
+                            </ng-container>
                             <!-- Id Column -->
                             <ng-container matColumnDef="id">
                                 <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -45,8 +54,8 @@
                             <ng-container matColumnDef="commands">
                                 <th mat-header-cell *matHeaderCellDef> </th>
                                 <td mat-cell *matCellDef="let element">
-                                    <ion-button expand="block" fill="solid" shape="round">
-                                        Valider
+                                    <ion-button size=small expand="block" fill="solid" shape="round" [routerLink]="'molding/'+element.id">
+                                        Editer
                                     </ion-button>
                                 </td>
                             </ng-container>
