S07-03 - Core - reRoute secteur

--- a/src/app/composants/shared-user-header/shared-user-header.component.html
+++ b/src/app/composants/shared-user-header/shared-user-header.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
     <ion-toolbar color=primary>
         <ion-buttons slot="start">
-            <ion-menu-button autoHide color="light"></ion-menu-button>
+            <ion-menu-button autoHide=false color="light"></ion-menu-button>
             <ion-img class="ion-hide-sm-down logo" src="assets/images/logoDaherFondBleu.png" (click)="navigateHome()">
             </ion-img>
         </ion-buttons>
