--- a/src/app/pages/admin/admin-molding/admin-molding.page.html
+++ b/src/app/pages/admin/admin-molding/admin-molding.page.html
@@ -54,7 +54,7 @@
                             <ng-container matColumnDef="commands">
                                 <th mat-header-cell *matHeaderCellDef> </th>
                                 <td mat-cell *matCellDef="let element">
-                                    <ion-button size=small expand="block" fill="solid" shape="round" [routerLink]="'molding/'+element.id">
+                                    <ion-button size=small expand="block" fill="solid" shape="round" [routerLink]="'create-molding/'+element.id">
                                         Editer
                                     </ion-button>
                                 </td>
