--- a/src/app/pages/admin/admin-molding/admin-molding.page.html
+++ b/src/app/pages/admin/admin-molding/admin-molding.page.html
@@ -1,14 +1,11 @@
 <ion-header>
     <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-back-button></ion-back-button>
-        </ion-buttons>
         <ion-title>Administration des moulages</ion-title>
     </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="false" color=light>
-    <ion-grid false>
+<ion-content color=light>
+    <ion-grid>
         <ion-row>
             <ion-col size="8">
                 <ion-card>
@@ -97,8 +94,4 @@
             </ion-col>
         </ion-row>
     </ion-grid>
-
-
-
-
 </ion-content>
