--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -1,7 +1,7 @@
 <app-shared-admin-header></app-shared-admin-header>
 
-<ion-content>
-    <ion-menu side="start" type="push" contentId="admin-content" #menu>
+<ion-content [fullscreen]="false" color=medium>
+    <ion-menu side="start" type="push" contentId="admin-content" open="true" #menuAdmin>
         <ion-header>
             <ion-toolbar color="danger">
                 <ion-title>Menu de l'admnistration</ion-title>
@@ -9,12 +9,16 @@
         </ion-header>
         <ion-content>
             <ion-list>
-                <ion-item routerLink="admin-user">
-                    <ion-label>Utilisateurs</ion-label>
-                    <ion-badge slot="end">11</ion-badge>
-                </ion-item>
+                <ion-menu-toggle auto-hide="true">
+                    <ion-item routerDirection="forward" (click)="navigate('admin/admin-user')">
+                        <ion-label>Utilisateurs</ion-label>
+                        <ion-badge slot="end">11</ion-badge>
+                    </ion-item>
+                </ion-menu-toggle>
                 <ion-item>Outillages</ion-item>
-                <ion-item routerLink="admin-molding">Moulages </ion-item>
+                <ion-menu-toggle auto-hide="true">
+                    <ion-item routerDirection="forward" (click)="navigate('admin/admin-molding')">Moulages</ion-item>
+                </ion-menu-toggle>
                 <ion-item>Kits</ion-item>
             </ion-list>
         </ion-content>
