--- a/src/app/pages/tool-request/indicators/indicators.page.html
+++ b/src/app/pages/tool-request/indicators/indicators.page.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>indicators</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Indicateurs</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
