--- a/src/app/pages/tool-request/manage-team/manage-team.page.html
+++ b/src/app/pages/tool-request/manage-team/manage-team.page.html
@@ -4,7 +4,7 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="false" class="content">
     <ion-popover trigger="trigger-button" triggerAction="click" side="top" alignment="center" component="toolInputComponent">
         <ng-template>
             <ion-content>Créer un groupe</ion-content>
@@ -14,83 +14,95 @@
             </ion-button>
         </ng-template>
     </ion-popover>
-    <ion-grid fixed>
-        <ion-row>
-            <ion-col size=3>
-                <ion-card>
-                    <ion-card-header>
-                        <ion-card-title>Groupe d'affectation</ion-card-title>
-                    </ion-card-header>
+    <div class="content">
+        <ion-card>
+            <ion-card-header color="light">
+                <ion-card-title>Groupes d'affectations
+                </ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+                <ion-toolbar>
+                    <ion-button slot=end size=small id="trigger-button">
+                        <ion-icon slot="start" name="add"></ion-icon>
+                        Créer
+                    </ion-button>
+                </ion-toolbar>
+                <ion-list>
+                    <ion-item *ngFor="let group of groups">
+                        <ion-label>
+                            {{group.libelle}}
+                        </ion-label>
+                    </ion-item>
+                </ion-list>
+            </ion-card-content>
+        </ion-card>
+        <ion-card class="table-card">
+            <ion-card-header color="light">
+                <ion-card-title>Liste des utilisateurs</ion-card-title>
+            </ion-card-header>
+            <ion-card-content class="table-card-content">
+                <div class="table">
                     <ion-toolbar>
-                        <ion-buttons slot="start">
-                            <ion-button (click)="newGroupClick()" id="trigger-button">
-                                <ion-icon slot="start" name="add"></ion-icon>
-                                Créer
+                        <ion-buttons slot="end">
+                            <ion-button size=small>
+                                Tout
+                            </ion-button>
+                            <ion-button slot=end *ngIf="!selection.isEmpty()" size=small (click)="removeUsersOfTeam(this.selection.selected)" color=success fill=solid>
+                                Faire sortir de l'équipe
                             </ion-button>
                         </ion-buttons>
                     </ion-toolbar>
-                    <ion-list>
-                        <ion-item *ngFor="let group of groups">
-                            <ion-label>
-                                {{group.libelle}}
-                            </ion-label>
-                        </ion-item>
-                    </ion-list>
-                </ion-card>
-            </ion-col>
-            <ion-col size=9>
-                <ion-card>
-                    <ion-card-header>
-                        <ion-card-title>Liste des utilisateurs</ion-card-title>
-                    </ion-card-header>
-                    <mat-table #table [dataSource]="toolsUserDataSource">
+                    <table mat-table class="ion-margin" #table [dataSource]="toolsUserDataSource">
                         <ng-container matColumnDef="nom">
-                            <mat-header-cell *matHeaderCellDef> Nom </mat-header-cell>
-                            <mat-cell *matCellDef="let user"> {{user.nom}} </mat-cell>
+                            <th mat-header-cell *matHeaderCellDef> Nom </th>
+                            <td mat-cell *matCellDef="let user"> {{user.nom}} </td>
                         </ng-container>
                         <ng-container matColumnDef="prenom">
-                            <mat-header-cell *matHeaderCellDef> Prénom </mat-header-cell>
-                            <mat-cell *matCellDef="let user"> {{user.prenom}} </mat-cell>
+                            <th mat-header-cell *matHeaderCellDef> Prénom </th>
+                            <td mat-cell *matCellDef="let user"> {{user.prenom}} </td>
                         </ng-container>
                         <ng-container matColumnDef="groupeAffectation">
-                            <mat-header-cell *matHeaderCellDef> Groupe </mat-header-cell>
-                            <mat-cell *matCellDef="let user">
+                            <th mat-header-cell *matHeaderCellDef> Groupe </th>
+                            <td mat-cell *matCellDef="let user">
                                 <ion-list *ngIf="user.groupeAffected.length > 0">
                                     <ion-label *ngFor="let group of user.groupeAffected">
                                         {{group.libelle}}
                                     </ion-label>
                                 </ion-list>
-                                <ion-item *ngIf="user.groupeAffected.length === 0">
-                                    <ion-select #select multiple="true" placeholder="Selectionner un groupe" (ionChange)="addGroupToUser(select.value, user)">
+                                <ion-item lines="none" color="light" *ngIf="user.groupeAffected.length === 0">
+                                    <ion-select *ngIf="user.groupeAffected.length === 0" #select multiple="true" placeholder="Selectionner un groupe" (ionChange)="addGroupToUser(select.value, user)">
                                         <ion-select-option *ngFor="let group of groups" [value]="group">
                                             {{group.libelle}}</ion-select-option>
                                     </ion-select>
                                 </ion-item>
-                            </mat-cell>
+                            </td>
                         </ng-container>
                         <ng-container matColumnDef="progAvion">
-                            <mat-header-cell *matHeaderCellDef> Programme avion </mat-header-cell>
-                            <mat-cell *matCellDef="let user"> {{user.programmeAvion}} </mat-cell>
+                            <th mat-header-cell *matHeaderCellDef> Programme avion </th>
+                            <td mat-cell *matCellDef="let user"> {{user.programmeAvion}} </td>
                         </ng-container>
                         <ng-container matColumnDef="lastCon">
-                            <mat-header-cell *matHeaderCellDef> Dernière connexion </mat-header-cell>
-                            <mat-cell *matCellDef="let user"> {{user.lastCon | date:"EEE dd/MM/yy"}} </mat-cell>
+                            <th mat-header-cell *matHeaderCellDef> Dernière connexion </th>
+                            <td mat-cell *matCellDef="let user"> {{user.lastCon | date:"EEE dd/MM/yy"}} </td>
                         </ng-container>
                         <ng-container matColumnDef="buttons">
-                            <mat-header-cell *matHeaderCellDef> </mat-header-cell>
-                            <mat-cell *matCellDef="let user">
-                                <ion-button size=small (click)="updateUser(user)" expand="block" fill="clear" shape="round">
-                                    Sauver
+                            <th mat-header-cell *matHeaderCellDef> </th>
+                            <td mat-cell *matCellDef="let user">
+                                <ion-button *ngIf="user.isUpdated" size=small (click)="updateUser(user)" color=secondary>
+                                    <ion-icon slot="icon-only" name="save-outline"></ion-icon>
                                 </ion-button>
-                            </mat-cell>
+                                <ion-button *ngIf="!user.isActive" size=small (click)="user.isActive=true">
+                                    Accepter
+                                </ion-button>
+                            </td>
                         </ng-container>
-                        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                        <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-                    </mat-table>
-                </ion-card>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="selection.toggle(row)" [class]="selection.isSelected(row) ? 'row-selected' : ''"></tr>
+                    </table>
+                </div>
+            </ion-card-content>
+        </ion-card>
+    </div>
 
 
 </ion-content>
