--- a/src/app/pages/tool-request/manage-team/manage-team.page.scss
+++ b/src/app/pages/tool-request/manage-team/manage-team.page.scss
@@ -1,3 +1,33 @@
-mat-table {
-    width: 100%;
+.content {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    ion-card {
+        max-height: 100%;
+        flex-grow: 1;
+        .table,
+        .table-card-content {
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            table {
+                width: 100%;
+            }
+        }
+    }
+    .table-card {
+        flex-grow: 4;
+    }
 }
+
+.row-selected>td {
+    color: var(--ion-color-danger);
+}
+
+tr:hover>td {
+    color: var(--ion-color-danger);
+}
+
+// .ion-margin {
+//     margin: 8px
+// }
