--- a/src/app/pages/tool-request/tool-request.page.html
+++ b/src/app/pages/tool-request/tool-request.page.html
@@ -42,6 +42,7 @@
                         <ion-label>
                             Liste des demandes outillages
                         </ion-label>
+                        <ion-badge *ngIf="(newRequests && isManager)" color="danger">New {{newRequests}}</ion-badge>
                     </ion-item>
                 </ion-menu-toggle>
                 <ion-menu-toggle auto-hide="true">
@@ -51,23 +52,26 @@
                         </ion-label>
                     </ion-item>
                 </ion-menu-toggle>
-                <ion-item-divider>
-                    <ion-label color=secondary>L'équipe</ion-label>
-                </ion-item-divider>
-                <ion-menu-toggle auto-hide="true">
-                    <ion-item [button]="true" routerDirection="root" (click)="navigate('tooling/manage-tool-team')">
-                        <ion-label>
-                            Gestion de l'équipe
-                        </ion-label>
-                    </ion-item>
-                </ion-menu-toggle>
-                <ion-menu-toggle auto-hide="true">
-                    <ion-item [disabled]="true" [button]="true" (click)="navigate('tooling/tool-indicators')" routerDirection="root">
-                        <ion-label>
-                            Indicateurs
-                        </ion-label>
-                    </ion-item>
-                </ion-menu-toggle>
+                <ion-item-group *ngIf="isManager">
+                    <ion-item-divider>
+                        <ion-label color=secondary>L'équipe</ion-label>
+                    </ion-item-divider>
+                    <ion-menu-toggle auto-hide="true">
+                        <ion-item [button]="true" routerDirection="root" (click)="navigate('tooling/manage-tool-team')">
+                            <ion-label>
+                                Gestion de l'équipe
+                            </ion-label>
+                            <ion-badge *ngIf="newUsers" color="danger">New {{newUsers}}</ion-badge>
+                        </ion-item>
+                    </ion-menu-toggle>
+                    <ion-menu-toggle auto-hide="true">
+                        <ion-item [disabled]="!roleGuard.isRole(['ROLE_ADMIN'])" [button]="true" (click)="navigate('tooling/tool-indicators')" routerDirection="root">
+                            <ion-label>
+                                Indicateurs
+                            </ion-label>
+                        </ion-item>
+                    </ion-menu-toggle>
+                </ion-item-group>
             </ion-list>
 
         </ion-content>
