--- a/src/app/pages/admin/admin-user/admin-user.page.html
+++ b/src/app/pages/admin/admin-user/admin-user.page.html
@@ -16,6 +16,11 @@
                     <ion-card-content>
                         <!-- <table mat-table [dataSource]="users | NotActive"> -->
                         <table mat-table [dataSource]="users">
+                            <!-- Id Column -->
+                            <ng-container matColumnDef="id">
+                                <th mat-header-cell *matHeaderCellDef> UserName </th>
+                                <td mat-cell *matCellDef="let user"> {{user.id}} </td>
+                            </ng-container>
                             <!-- Username Column -->
                             <ng-container matColumnDef="username">
                                 <th mat-header-cell *matHeaderCellDef> UserName </th>
