--- a/src/app/pages/tool-request/maintenance-reparation/maintenance-reparation.page.scss
+++ b/src/app/pages/tool-request/maintenance-reparation/maintenance-reparation.page.scss
@@ -1,13 +1,14 @@
 .flex-row {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    ion-button {
+        align-items: center;
+    }
 }
 
-.content {
+.content-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    height: 100%;
     overflow: hidden;
 }
 
