--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,164 +1,165 @@
 <ion-header>
-    <ion-toolbar>
-        <ion-title>Création d'un utilisateur</ion-title>
-        <ion-buttons slot="start">
-            <ion-back-button defaultHref="home"></ion-back-button>
-        </ion-buttons>
-    </ion-toolbar>
+  <ion-toolbar>
+    <ion-title>Création d'un utilisateur</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="home"></ion-back-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-    <ion-grid class="ion-align-items-center ion-justify-content-center">
-        <ion-row class="full-height">
-            <ion-card class="ion-padding">
-                <ion-card-header>
-                    <ion-card-title color=primary>Fiche de renseignements</ion-card-title>
-                    <ion-text color="medium">
-                        <h3>La création du compte est soumise à validation du chef d'équipe ou de l'administrateur</h3>
-                    </ion-text>
-                </ion-card-header>
-                <ion-card-content>
-                    <form [formGroup]="registerForm">
-                        <ion-slides #slider pager="false" [options]="slideOpts">
-                            <ion-slide>
-                                <!-- <form [formGroup]="roleForm" (submit)="submitRole()"> -->
-                                <ion-grid class="ion-align-items-center ion-justify-content-center" formGroupName="roleForm">
-                                    <ion-row>
-                                        <ion-col size="3">
-                                            <ion-radio-group required formControlName="site">
-                                                <ion-list-header>
-                                                    <ion-label color=primary>Site
-                                                        <ion-text color="danger">*</ion-text>
-                                                    </ion-label>
-                                                </ion-list-header>
-                                                <ion-item *ngFor="let site of sites">
-                                                    <ion-label>{{site.nom}}</ion-label>
-                                                    <ion-radio [value]="site.id"></ion-radio>
-                                                </ion-item>
-                                            </ion-radio-group>
-                                        </ion-col>
-                                        <ion-col size="3">
-                                            <ion-radio-group required formControlName="unite">
-                                                <ion-list-header>
-                                                    <ion-label color=primary>Unite
-                                                        <ion-text color="danger">*</ion-text>
-                                                    </ion-label>
-                                                </ion-list-header>
-                                                <ion-item *ngFor="let unite of unites">
-                                                    <ion-label>{{unite.nom}}</ion-label>
-                                                    <ion-radio [value]="unite.id"></ion-radio>
-                                                </ion-item>
-                                            </ion-radio-group>
-                                        </ion-col>
-                                        <ion-col size="3">
-                                            <ion-radio-group required formControlName="service">
-                                                <ion-list-header>
-                                                    <ion-label color=primary>Service
-                                                        <ion-text color="danger">*</ion-text>
-                                                    </ion-label>
-                                                </ion-list-header>
-                                                <ion-item *ngFor="let service of services">
-                                                    <ion-label>{{service.nom}}</ion-label>
-                                                    <ion-radio [value]="service.id"></ion-radio>
-                                                </ion-item>
-                                            </ion-radio-group>
-                                        </ion-col>
-                                        <ion-col size="3">
-                                            <ion-radio-group required name="poste" formControlName="poste">
-                                                <ion-list-header>
-                                                    <ion-label color=primary>Rôle
-                                                        <ion-text color="danger">*</ion-text>
-                                                    </ion-label>
-                                                </ion-list-header>
-                                                <ion-item *ngFor="let role of roles">
-                                                    <ion-label>{{role.libelle}}</ion-label>
-                                                    <ion-radio [value]="role.id"></ion-radio>
-                                                </ion-item>
-                                            </ion-radio-group>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
+  <ion-grid class="ion-align-items-center ion-justify-content-center">
+    <ion-row class="full-height">
+      <ion-card class="ion-padding">
+        <ion-card-header>
+          <ion-card-title color=primary>Fiche de renseignements</ion-card-title>
+          <ion-text color="medium">
+            <h3>La création du compte est soumise à validation du chef d'équipe ou de l'administrateur</h3>
+          </ion-text>
+        </ion-card-header>
+        <ion-card-content>
+          <form [formGroup]="registerForm">
+            <ion-slides #slider pager="false" [options]="slideOpts">
+              <ion-slide>
+                <!-- <form [formGroup]="roleForm" (submit)="submitRole()"> -->
+                <ion-grid class="ion-align-items-center ion-justify-content-center" formGroupName="roleForm">
+                  <ion-row>
+                    <ion-col size="3">
+                      <ion-radio-group required formControlName="site">
+                        <ion-list-header>
+                          <ion-label color=primary>Site
+                            <ion-text color="danger">*</ion-text>
+                          </ion-label>
+                        </ion-list-header>
+                        <ion-item *ngFor="let site of sites$ | async">
+                          <ion-label>{{site.nom}}</ion-label>
+                          <ion-radio [value]="site.id"></ion-radio>
+                        </ion-item>
+                      </ion-radio-group>
+                    </ion-col>
+                    <ion-col size="3">
+                      <ion-radio-group required formControlName="unite">
+                        <ion-list-header>
+                          <ion-label color=primary>Unite
+                            <ion-text color="danger">*</ion-text>
+                          </ion-label>
+                        </ion-list-header>
+                        <ion-item *ngFor="let unite of unites$ | async">
+                          <ion-label>{{unite.nom}}</ion-label>
+                          <ion-radio [value]="unite.id"></ion-radio>
+                        </ion-item>
+                      </ion-radio-group>
+                    </ion-col>
+                    <ion-col size="3">
+                      <ion-radio-group required formControlName="service">
+                        <ion-list-header>
+                          <ion-label color=primary>Service
+                            <ion-text color="danger">*</ion-text>
+                          </ion-label>
+                        </ion-list-header>
+                        <ion-item *ngFor="let service of services$ | async">
+                          <ion-label>{{service.nom}}</ion-label>
+                          <ion-radio [value]="service.id"></ion-radio>
+                        </ion-item>
+                      </ion-radio-group>
+                    </ion-col>
+                    <ion-col size="3">
+                      <ion-radio-group required name="poste" formControlName="poste">
+                        <ion-list-header>
+                          <ion-label color=primary>Rôle
+                            <ion-text color="danger">*</ion-text>
+                          </ion-label>
+                        </ion-list-header>
+                        <ion-item *ngFor="let role of roles$ | async">
+                          <ion-label>{{role.libelle}}</ion-label>
+                          <ion-radio [value]="role.id"></ion-radio>
+                        </ion-item>
+                      </ion-radio-group>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
 
-                                <!-- </form> -->
-                            </ion-slide>
-                            <ion-slide>
-                                <!-- <form [formGroup]="roleForm" (submit)="submitNewUser()"> -->
-                                <ion-grid fixed class="ion-align-items-center ion-justify-content-center" formGroupName="identityForm">
-                                    <ion-row>
-                                        <ion-col size="12">
-                                            <ion-label>Identité</ion-label>
-                                        </ion-col>
-                                    </ion-row>
-                                    <ion-row>
-                                        <ion-col size="6">
-                                            <ion-item>
-                                                <ion-label color=primary position="floating">Nom
-                                                    <ion-text color="danger">*</ion-text>
-                                                </ion-label>
-                                                <ion-input required formControlName="lastName" type="text"></ion-input>
-                                            </ion-item>
+                <!-- </form> -->
+              </ion-slide>
+              <ion-slide>
+                <!-- <form [formGroup]="roleForm" (submit)="submitNewUser()"> -->
+                <ion-grid fixed class="ion-align-items-center ion-justify-content-center" formGroupName="identityForm">
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-label>Identité</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="6">
+                      <ion-item>
+                        <ion-label color=primary position="floating">Nom
+                          <ion-text color="danger">*</ion-text>
+                        </ion-label>
+                        <ion-input required formControlName="lastName" type="text"></ion-input>
+                      </ion-item>
 
-                                        </ion-col>
-                                        <ion-col size="6">
-                                            <ion-item>
-                                                <ion-label color=primary position="floating">Prénom
-                                                    <ion-text color="danger">*</ion-text>
-                                                </ion-label>
-                                                <ion-input required formControlName="firstName" type="text"></ion-input>
-                                            </ion-item>
-                                        </ion-col>
-                                    </ion-row>
-                                    <ion-row>
-                                        <ion-col size="12">
-                                            <ion-item *ngIf="registerForm.controls.roleForm.value.poste !==1">
-                                                <ion-label color=primary position="floating">Mot de passe
-                                                    <ion-text color="danger">*</ion-text>
-                                                </ion-label>
-                                                <ion-input type="password" name="password" formControlName="password"></ion-input>
-                                            </ion-item>
-                                            <ion-item *ngIf="registerForm.controls.roleForm.value.poste !==1">
-                                                <ion-label color=primary position="floating">Répéter mot de passe
-                                                    <ion-text color="danger">*</ion-text>
-                                                </ion-label>
-                                                <ion-input formControlName="confirmPassword" name="confirmPassword" type="password"></ion-input>
-                                            </ion-item>
-                                        </ion-col>
-                                    </ion-row>
-                                    <ion-row>
-                                        <ion-col size="6">
-                                            <ion-item>
-                                                <ion-label color=primary position="floating">Matricule
-                                                    <ion-text color="danger">*</ion-text>
-                                                </ion-label>
-                                                <ion-input required formControlName="matricule" type="text"></ion-input>
-                                            </ion-item>
-                                        </ion-col>
-                                        <ion-col size="6">
-                                            <ion-item>
-                                                <ion-label color=primary position="floating">Téléphone
-                                                    <ion-text color="danger">*</ion-text>
-                                                </ion-label>
-                                                <ion-input required formControlName="telephone" type="text"></ion-input>
-                                            </ion-item>
-                                        </ion-col>
-                                    </ion-row>
-                                </ion-grid>
-                                <!-- </form> -->
-                            </ion-slide>
-                        </ion-slides>
-                    </form>
-                </ion-card-content>
-            </ion-card>
-        </ion-row>
-    </ion-grid>
+                    </ion-col>
+                    <ion-col size="6">
+                      <ion-item>
+                        <ion-label color=primary position="floating">Prénom
+                          <ion-text color="danger">*</ion-text>
+                        </ion-label>
+                        <ion-input required formControlName="firstName" type="text"></ion-input>
+                      </ion-item>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-item *ngIf="registerForm.controls.roleForm.value.poste !==4">
+                        <ion-label color=primary position="floating">Mot de passe
+                          <ion-text color="danger">*</ion-text>
+                        </ion-label>
+                        <ion-input type="password" name="password" formControlName="password"></ion-input>
+                      </ion-item>
+                      <ion-item *ngIf="registerForm.controls.roleForm.value.poste !==4">
+                        <ion-label color=primary position="floating">Répéter mot de passe
+                          <ion-text color="danger">*</ion-text>
+                        </ion-label>
+                        <ion-input formControlName="confirmPassword" name="confirmPassword" type="password"></ion-input>
+                      </ion-item>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="6">
+                      <ion-item>
+                        <ion-label color=primary position="floating">Matricule
+                          <ion-text color="danger">*</ion-text>
+                        </ion-label>
+                        <ion-input required formControlName="matricule" type="text"></ion-input>
+                      </ion-item>
+                    </ion-col>
+                    <ion-col size="6">
+                      <ion-item>
+                        <ion-label color=primary position="floating">Téléphone
+                          <ion-text color="danger">*</ion-text>
+                        </ion-label>
+                        <ion-input required formControlName="telephone" type="text"></ion-input>
+                      </ion-item>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+                <!-- </form> -->
+              </ion-slide>
+            </ion-slides>
+          </form>
+        </ion-card-content>
+      </ion-card>
+    </ion-row>
+  </ion-grid>
 </ion-content>
 <ion-footer>
-    <ion-toolbar>
-        <ion-button *ngIf="currentpage===0" slot=end color=primary (click)="submitRole()" fill="solid" strong [disabled]="registerForm.controls.roleForm.invalid">
-            Suivant
-        </ion-button>
-        <ion-button *ngIf="currentpage!==0" slot=end (click)="submitNewUser()" [disabled]="registerForm.invalid">
-            S'enregistrer
-        </ion-button>
-    </ion-toolbar>
+  <ion-toolbar>
+    <ion-button *ngIf="currentpage===0" slot=end color=primary (click)="submitRole()" fill="solid" strong
+      [disabled]="registerForm.controls.roleForm.invalid">
+      Suivant
+    </ion-button>
+    <ion-button *ngIf="currentpage!==0" slot=end (click)="submitNewUser()" [disabled]="registerForm.invalid">
+      S'enregistrer
+    </ion-button>
+  </ion-toolbar>
 </ion-footer>
